start implement i18n, remove useless providers